--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "miragejs": "^0.1.43",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4",
