--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.17",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "miragejs": "^0.1.43",
