--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "vue": "^3.2.25",
     "vue-i18n": "^9.2.0-beta.26",
