--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "axios": "^0.25.0",
     "express": "^4.17.2",
+    "msw": "^0.36.8",
     "vue": "^3.2.25",
     "vue-i18n": "^9.2.0-beta.26",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/node": "^17.0.17",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
@@ -24,5 +26,8 @@
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
